tests/ui/coercion/issue-53475.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/issue-53475.rs:10:1
   |
LL | impl<T> CoerceUnsized<Foo<dyn Any>> for Foo<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | the parameter type `T` must be valid for the static lifetime...
   | ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | impl<T: 'static> CoerceUnsized<Foo<dyn Any>> for Foo<T> {}
   |       +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
